# SlicerExtensions

./: LICENSE
Mosamatic/Mosamatic/: CMakeLists.txt
Mosamatic/Mosamatic/MuscleFatSegmentation/: CMakeLists.txt  MuscleFatSegmentation.py
Mosamatic/Mosamatic/MuscleFatSegmentation/Resources/UI/: MuscleFatSegmentation.ui
